; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_pvcalls-front.c_pvcalls_front_changed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_pvcalls-front.c_pvcalls_front_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenbus_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xenbus_device*, i32)* @pvcalls_front_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pvcalls_front_changed(%struct.xenbus_device* %0, i32 %1) #0 {
  %3 = alloca %struct.xenbus_device*, align 8
  %4 = alloca i32, align 4
  store %struct.xenbus_device* %0, %struct.xenbus_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %21 [
    i32 129, label %6
    i32 130, label %6
    i32 131, label %6
    i32 132, label %6
    i32 128, label %6
    i32 133, label %7
    i32 134, label %8
    i32 136, label %11
    i32 135, label %18
  ]

6:                                                ; preds = %2, %2, %2, %2, %2
  br label %21

7:                                                ; preds = %2
  br label %21

8:                                                ; preds = %2
  %9 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %10 = call i32 @xenbus_switch_state(%struct.xenbus_device* %9, i32 134)
  br label %21

11:                                               ; preds = %2
  %12 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %13 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %14, 136
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %21

17:                                               ; preds = %11
  br label %18

18:                                               ; preds = %2, %17
  %19 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %20 = call i32 @xenbus_frontend_closed(%struct.xenbus_device* %19)
  br label %21

21:                                               ; preds = %2, %18, %16, %8, %7, %6
  ret void
}

declare dso_local i32 @xenbus_switch_state(%struct.xenbus_device*, i32) #1

declare dso_local i32 @xenbus_frontend_closed(%struct.xenbus_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
